# hyperion

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Gemfile  LICENSE  README.md  Rakefile  SECURITY.md  hyperion-rb-1.6.3.gem  hyperion-rb-1.7.0.gem  hyperion-rb-1.7.1.gem  hyperion-rb-1.8.0.gem  hyperion-rb-2.0.0.gem  hyperion-rb-2.0.1.gem  hyperion-rb-2.1.0.gem  hyperion-rb-2.2.0.gem  hyperion-rb-2.3.0.gem  hyperion-rb-2.4.0.gem  hyperion-rb-2.5.0.gem  hyperion-rb-2.6.0.gem  hyperion-rb-2.7.0.gem  hyperion-rb-2.8.0.gem  hyperion-rb-2.9.0.gem  hyperion.gemspec
autobahn-config/: fuzzingclient.json
bench/: 4way_compare.sh  Gemfile.4way  agoo_boot.rb  cluster_distribution.sh  compare.rb  gc_audit_2_4_b.md  gc_audit_2_4_b.rb  gc_audit_2_4_b_trace.rb  grpc_stream.proto  grpc_stream.ru  grpc_stream_bench.sh  grpc_stream_falcon.rb  grpc_stream_falcon_bench.sh  h2_falcon_compare.sh  h2_post.ru  h2_rails_shape.ru  h2_rails_shape.sh  h2_streams.sh  headers_heavy.ru  headers_heavy_ruby.ru  headers_heavy_wrk.lua  hello.ru  hello_handle_block.ru  hello_static.ru  io_uring_soak.sh  keepalive_memory.rb  keepalive_memory.sh  parse_autobahn_index.rb  profile_hello.rb  rails_api.ru  rails_ar.ru  rails_erb.ru  run_all.sh  sse.ru  sse_generic.ru  static.ru  static_8k.ru  static_handle_static.ru  tls_json_50k.ru  tls_static_1m.ru  (+9 more)
config/: hyperion.example.rb
docs/: ASYNC_IO.md  BENCH_2026_04_27.md  BENCH_BEAT_AGOO_2026_05_07_12row.csv  BENCH_BEAT_AGOO_2026_05_07_AR.csv  BENCH_HOST_SETUP.md  BENCH_HOTPATH_2026_05_08_after.csv  BENCH_HOTPATH_2026_05_08_before.csv  BENCH_HYPERION_2_0.md  BENCH_HYPERION_2_11.md  BENCH_HYPERION_2_14.md  BENCH_HYPERION_2_14_results.csv  BENCH_HYPERION_2_17_AR_results.csv  BENCH_HYPERION_RAILS.md  BENCH_HYPERION_RAILS_PROFILES.md  BENCH_PERF_ROADMAP_01_after.csv  BENCH_PERF_ROADMAP_01_before.csv  BENCH_PERF_ROADMAP_02_after.csv  BENCH_PERF_ROADMAP_02_before.csv  BENCH_ROW19_HOTPATH_FIX_2026_05_07.csv  BENCH_ROW19_HOTPATH_FIX_2026_05_07.txt  CLUSTER_AND_SO_REUSEPORT.md  CONFIGURATION.md  GRPC.md  HANDLE_STATIC_AND_HANDLE_BLOCK.md  HTTP2_AND_TLS.md  IO_URING_HOTPATH.md  LOGGING.md  MIGRATING_FROM_PUMA.md  OBSERVABILITY.md  OPERATOR_GUIDANCE.md  REVERSE_PROXY.md  RFC_2_0_DESIGN.md  WEBSOCKETS.md
ext/hyperion_h2_codec/: Cargo.toml  extconf.rb
ext/hyperion_h2_codec/src/: frames.rs  hpack.rs  lib.rs
ext/hyperion_h2_codec/src/hpack/: huffman.rs
ext/hyperion_io_uring/: Cargo.toml  extconf.rb
ext/hyperion_io_uring/src/: buffer_ring.rs  hotpath.rs  lib.rs
lib/: hyperion-rb.rb  hyperion.rb
spec/: spec_helper.rb
(+197 files in other folders)
